--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Logo" class="responsive-img"></a>
+                <a href="index.html"><p class="initials">VP</p></a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="highlighted" href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="skills.html">Skills</a></li>
@@ -34,13 +34,13 @@
     
     <section id="hero">
         <div class="hero-content">
-            <h1>Lasith Dissanayake</h1>
-            <p>Material Science and Engineering undergraduate | Machine Learning Enthusiast</p>
+            <h1>Vidumini Pathirage</h1>
+            <p>Material Science and Engineering Undergraduate</p>
         </div>
     </section>
     
     <section id="home-content">
-        <div class="container">
+        <div class="body_container">
             <h2>Welcome to My Portfolio</h2>
             <p>This is a brief introduction to who I am and what I do.</p>
         </div>
