--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Logo" class="responsive-img"></a>
+                <a href="index.html"><p class="initials">VP</p></a>
             </div>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
+                    <li><a class="highlighted" href="about.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -33,7 +33,7 @@
     </header>
     
     <section id="about">
-        <div class="container">
+        <div class="body_container">
             <h2>About Me</h2>
             <p>I'm Lasith Dissanayake, a Material Science and Engineering undergraduate at the University of Moratuwa. I am interested in machine learning and generative AI, and I am working on improving my skills in these areas.</p>
             <img src="images/about.jpg" alt="About Me Image" class="responsive-img">
