--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Logo" class="responsive-img"></a>
+                <a href="index.html"><p class="initials">VP</p></a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -20,7 +20,7 @@
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="skills.html">Skills</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a class="highlighted" href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="hamburger">
@@ -33,7 +33,7 @@
     </header>
     
     <section id="blog">
-        <div class="container">
+        <div class="body_container">
             <h2>Blog</h2>
             <div class="blog-post">
                 <h3>Blog Post Title 1</h3>
