--- a/skills.html
+++ b/skills.html
@@ -12,14 +12,14 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Logo" class="responsive-img"></a>
+                <a href="index.html"><p class="initials">VP</p></a>
             </div>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="skills.html">Skills</a></li>
+                    <li><a class="highlighted" href="skills.html">Skills</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -33,7 +33,7 @@
     </header>
     
     <section id="skills">
-        <div class="container">
+        <div class="body_container">
             <h2>Skills</h2>
             <div class="skill">
                 <h3>Machine Learning</h3>
