--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 </ul>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Lasith Dissanayake. All rights reserved.</p>
+                <p>&copy; 2024 Vidumini Pathirage. All rights reserved.</p>
             </div>
         </div>
     </footer>
